Requires VA-API >= 1.1.0

Use a static_assert to check the minimum required version.

Bug: 913118
Change-Id: I4762b6497d3777653ea581da4ed3e25dc459fe86
Reviewed-on: https://chromium-review.googlesource.com/c/1378675
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Alexandre Courbot <acourbot@chromium.org>
Reviewed-by: Hirokazu Honda <hiroh@chromium.org>
Commit-Queue: Julien Isorce <julien.isorce@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617727}
Former-commit-id: 49cbe182511315aba02543c0406c528e682a057b